--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <script src="https://kit.fontawesome.com/6347032f6c.js" crossorigin="anonymous"></script>
 </head>
 <body class="open-sans-normal">
-    <header class="header secondary-bg hide">
+    <header class="header secondary-bg ">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
                 <li><a class="dark-2" href="">Portfolio</a></li>
                 <li><a class="dark-2" href="">Blog</a></li>
-                <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
+                <li><a href=""><button class="btn-primary hire-me">Hire Me</button></a></li>
             </ul>
         </nav>
         <div class="banner">
